--- a/f1leaderboard.html
+++ b/f1leaderboard.html
@@ -254,108 +254,183 @@
 <thead><tr><th>DRIVER</th></tr></thead>
 <tbody></tbody>
 </table>
-
 <script>
-  const sheetId = "1OxEy3fx4fW1P-aPlU-AHlPR8r23KJieLKxdtKy4koog";
-  const teamCars = {
-    "ALPINE":"ALPINE.webp","ASTON MARTIN":"ASTON.webp","FERRARI":"FERRARI.webp",
-    "HAAS":"HAAS.webp","MCLAREN":"MCLAREN.webp","MERCEDES":"MERCEDES.webp",
-    "RACING BULLS":"RACINGBULLS.webp","RED BULL RACING":"RBR.webp",
-    "KICK SAUBER":"SAUBER.webp","RESERVE":"RESERVE.webp","WILLIAMS":"WILLIAMS.webp"
-  };
-  const teamLogos = {
-    "ALPINE":"ALPINELOGO.webp","ASTON MARTIN":"ASTONLOGO.webp","FERRARI":"FERRARILOGO.webp",
-    "HAAS":"HAASLOGO.webp","MCLAREN":"MCLARENLOGO.webp","MERCEDES":"MERCEDESLOGO.webp",
-    "RACING BULLS":"RBRLOGO.webp","RED BULL RACING":"RBRLOGO.webp",
-    "KICK SAUBER":"KICKLOGO.webp","RESERVE":"RESERVELOGO.webp","WILLIAMS":"WILLIAMSLOGO.webp"
-  };
-  const safeClass = t => "driver-row team-" + t.replace(/\s+/g, "-");
+const sheetId = "1OxEy3fx4fW1P-aPlU-AHlPR8r23KJieLKxdtKy4koog";
+const teamCars = {
+  "ALPINE":"ALPINE.webp",
+  "ASTON MARTIN":"ASTON.webp",
+  "FERRARI":"FERRARI.webp",
+  "HAAS":"HAAS.webp",
+  "MCLAREN":"MCLAREN.webp",
+  "MERCEDES":"MERCEDES.webp",
+  "RACING BULLS":"RACINGBULLS.webp",
+  "RED BULL RACING":"RBR.webp",
+  "KICK SAUBER":"SAUBER.webp",
+  "RESERVE":"RESERVE.webp",
+  "WILLIAMS":"WILLIAMS.webp"
+};
+const teamLogos = {
+  "ALPINE":"ALPINELOGO.webp",
+  "ASTON MARTIN":"ASTONLOGO.webp",
+  "FERRARI":"FERARRILOGO.webp",
+  "HAAS":"HAASLOGO.webp",
+  "MCLAREN":"MCLARENLOGO.webp",
+  "MERCEDES":"MERCEDESLOGO.webp",
+  "RACING BULLS":"RBLOGO.webp",
+  "RED BULL RACING":"RBRLOGO.webp",
+  "KICK SAUBER":"KICKLOGO.webp",
+  "RESERVE":"RESERVELOGO.webp",
+  "WILLIAMS":"WILLIAMSLOGO.webp"
+};
+const safeClass = t => "driver-row team-" + t.replace(/\s+/g,"-");
 
-  fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts=${Date.now()}`)
-    .then(r => r.text())
-    .then(t => JSON.parse(t.substr(47).slice(0,-2)))
-    .then(j => {
-      const totalCols = j.table.cols.length;
-      const firstRaceIdx = 2;
-      const totalPtsIdx = totalCols - 1;
-      const rows = j.table.rows.map(r => r.c.map(c => c?.v || ""));
+fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json&ts=${Date.now()}`)
+  .then(r => r.text())
+  .then(t => JSON.parse(t.substr(47).slice(0,-2)))
+  .then(j => {
+    const rows = j.table.rows.map(r => r.c.map(c => c?.v || ""));
+    const dBody = document.querySelector("#driver-table tbody");
+    const cBody = document.querySelector("#constructor-table tbody");
+    const uBody = document.querySelector("#unassigned-table tbody");
+    dBody.innerHTML = cBody.innerHTML = uBody.innerHTML = "";
 
-      // Clear all tables
-      ["#driver-table tbody","#constructor-table tbody","#free-slots-table tbody","#unassigned-table tbody"]
-        .forEach(sel => document.querySelector(sel).innerHTML = "");
+    const prevDriverTotals = [];
+    const currDriverTotals = [];
+    const prevConstructorTotals = {};
+    const currConstructorTotals = {};
+    const driverTeamMap = {};
 
-      const prevDriver = [], currDriver = [], prevCons = {}, currCons = {}, teamCount = {}, freeCount = {}, map = {};
-      const sumRaces = row => row.slice(firstRaceIdx, totalPtsIdx)
-                                  .reduce((a,v) => a + (parseInt(v) || 0), 0);
+    function getPrevTotal(r) {
+      return r.slice(2, 17).reduce((acc, val) => acc + (parseInt(val) || 0), 0);
+    }
 
-      rows.forEach(r => {
-        const name = (r[0] || "").replace(/\[\d+\]\s*-\s*/, "").trim();
-        const team = (r[1] || "").trim();
-        if (!name) return;
-        const p = sumRaces(r);
-        const c = parseInt(r[totalPtsIdx]) || 0;
-        prevDriver.push({name, pts: p});
-        currDriver.push({name, pts: c});
-        map[name] = team;
-        if (team) {
-          prevCons[team] = (prevCons[team] || 0) + p;
-          currCons[team] = (currCons[team] || 0) + c;
-          teamCount[team] = (teamCount[team] || 0) + 1;
-          freeCount[team] = 2 - teamCount[team];
-        }
-      });
+    rows.forEach(r => {
+      const raw = (r[0] || "") + "";
+      const name = raw.replace(/\[\s*\d+\s*\]\s*-\s*/, "").trim();
+      const team = (r[1] || "").trim();
+      const currPts = parseInt(r[22]) || 0;
+      const prevPts = getPrevTotal(r);
 
-      const buildRank = list => list.sort((a,b) => b.pts - a.pts)
-                                   .map((e,i) => ({name: e.name, rank: i+1}))
-                                   .reduce((m,e) => (m[e.name] = e.rank, m), {});
-      const pr = buildRank([...prevDriver]);
-      const cr = buildRank([...currDriver]);
+      if (!name) return;
 
-      // Render driver standings
-      currDriver.sort((a,b) => b.pts - a.pts).forEach(d => {
-        const pos = cr[d.name];
-        const diff = (pr[d.name] || 0) - pos;
-        let arrow = "";
-        if (diff > 0) arrow = '<img src="up_arrow.webp" class="arrow-icon" alt="↑">';
-        else if (diff < 0) arrow = '<img src="down_arrow.webp" class="arrow-icon" alt="↓">';
-        const TU = map[d.name].toUpperCase();
-        document.querySelector('#driver-table tbody').innerHTML +=
-          `<tr class="${safeClass(TU)}"><td>${pos}</td><td>${d.name}</td>` +
-          `<td><img src="${teamCars[TU]}" class="car"/>${map[d.name]}` +
-          `<img src="${teamLogos[TU]}" class="logo"/></td><td>${d.pts} ${arrow}</td></tr>`;
-      });
+      prevDriverTotals.push({ name, pts: prevPts });
+      currDriverTotals.push({ name, pts: currPts });
+      driverTeamMap[name] = team;
 
-      // Render constructors
-      const prevCR = buildRank(Object.entries(prevCons).map(([n,pts]) => ({name:n, pts})));
-      const currCR = buildRank(Object.entries(currCons).map(([n,pts]) => ({name:n, pts})));
-      Object.entries(currCons).sort(([,aPts],[,bPts]) => bPts - aPts).forEach(([team, pts]) => {
-        const diff = (prevCR[team] || 0) - (currCR[team] || 0);
-        let arrow = "";
-        if (diff > 0) arrow = '<img src="up_arrow.webp" class="arrow-icon" alt="↑">';
-        else if (diff < 0) arrow = '<img src="down_arrow.webp" class="arrow-icon" alt="↓">';
-        const TU = team.toUpperCase();
-        document.querySelector('#constructor-table tbody').innerHTML +=
-          `<tr class="${safeClass(TU)}"><td><img src="${teamCars[TU]}" class="car"/>${team}` +
-          `<img src="${teamLogos[TU]}" class="logo"/></td><td>${pts} ${arrow}</td></tr>`;
-      });
-
-      // Render free slots
-      Object.entries(freeCount).forEach(([team, slots]) => {
-        if (slots > 0) {
-          const TU = team.toUpperCase();
-          document.querySelector('#free-slots-table tbody').innerHTML +=
-            `<tr class="${safeClass(TU)}"><td><img src="${teamCars[TU]}" class="car"/>${team}` +
-            `<img src="${teamLogos[TU]}" class="logo"/></td><td>${slots} free</td></tr>`;
-        }
-      });
+      if (team) {
+        prevConstructorTotals[team] = (prevConstructorTotals[team] || 0) + prevPts;
+        currConstructorTotals[team] = (currConstructorTotals[team] || 0) + currPts;
+      }
     });
 
-  // Driver of the Day
+    function rankMap(list) {
+      return list
+        .sort((a, b) => b.pts - a.pts)
+        .map((e, i) => ({ ...e, rank: i + 1 }))
+        .reduce((acc, e) => { acc[e.name] = e.rank; return acc; }, {});
+    }
+
+    const prevRanks = rankMap([...prevDriverTotals]);
+    const currRanks = rankMap([...currDriverTotals]);
+
+    currDriverTotals
+      .sort((a, b) => b.pts - a.pts)
+      .forEach(entry => {
+        const name = entry.name;
+        const team = driverTeamMap[name];
+        const pts = entry.pts;
+        const pos = currRanks[name];
+        const teamUpper = (team || "").toUpperCase();
+        const diff = (prevRanks[name] || 0) - (currRanks[name] || 0);
+        let arrow = "";
+        if (diff > 0) arrow = '<img src="up_arrow.webp" class="arrow-icon" alt="↑">';
+        else if (diff < 0) arrow = '<img src="down_arrow.webp" class="arrow-icon" alt="↓">';
+
+        console.log("Driver:", name, "| Prev Rank:", prevRanks[name], "| Curr Rank:", currRanks[name], "| Diff:", diff);
+
+        const tr = document.createElement("tr");
+        tr.className = safeClass(teamUpper);
+        tr.innerHTML = `
+          <td>${pos}</td>
+          <td>${name}</td>
+          <td>
+            <img src="${teamCars[teamUpper]}" class="car" alt="${team}"/>
+            ${team}
+            <img src="${teamLogos[teamUpper]}" class="logo" alt="${team}"/>
+          </td>
+          <td>${pts} ${arrow}</td>`;
+        dBody.appendChild(tr);
+      });
+
+    const prevCRank = rankMap(Object.entries(prevConstructorTotals).map(([name, pts]) => ({ name, pts })));
+    const currCRank = rankMap(Object.entries(currConstructorTotals).map(([name, pts]) => ({ name, pts })));
+
+    Object.entries(currConstructorTotals)
+      .sort((a, b) => b[1] - a[1])
+      .forEach(([team, pts]) => {
+        const teamUpper = team.toUpperCase();
+        const diff = (prevCRank[team] || 0) - (currCRank[team] || 0);
+        let arrow = "";
+        if (diff > 0) arrow = '<img src="up_arrow.webp" class="arrow-icon" alt="↑">';
+        else if (diff < 0) arrow = '<img src="down_arrow.webp" class="arrow-icon" alt="↓">';
+
+        console.log("Constructor:", team, "| Prev Rank:", prevCRank[team], "| Curr Rank:", currCRank[team], "| Diff:", diff);
+
+        const tr = document.createElement("tr");
+        tr.className = safeClass(teamUpper);
+        tr.innerHTML = `
+          <td>
+            <img src="${teamCars[teamUpper]}" class="car" alt="${team}"/>
+            ${team}
+            <img src="${teamLogos[teamUpper]}" class="logo" alt="${team}"/>
+          </td>
+          <td>${pts} ${arrow}</td>`;
+        cBody.appendChild(tr);
+      });
+  
+    // --- Team Slots Free Section ---
+    const teamSlotLimit = 2;
+    const teamSlotCounts = {};
+    const teamFreeCounts = {};
+
+    rows.forEach(r => {
+      const driver = (r[0] || "").trim();
+      const team = (r[1] || "").trim();
+      if (!team) return;
+      teamSlotCounts[team] = (teamSlotCounts[team] || 0) + (driver ? 1 : 0);
+      teamFreeCounts[team] = (teamFreeCounts[team] || 0) + (!driver ? 1 : 0);
+    });
+
+    const freeTbody = document.querySelector("#free-slots-table tbody");
+    Object.entries(teamFreeCounts).forEach(([team, freeCount]) => {
+      if (freeCount > 0) {
+        const teamUpper = team.toUpperCase();
+        const tr = document.createElement("tr");
+        tr.className = safeClass(teamUpper);
+        tr.innerHTML = `
+          <td>
+            <img src="${teamCars[teamUpper]}" class="car" alt="${team}"/>
+            ${team}
+            <img src="${teamLogos[teamUpper]}" class="logo" alt="${team}"/>
+          </td>
+          <td>${freeCount} slot${freeCount > 1 ? 's' : ''} free</td>
+        `;
+        freeTbody.appendChild(tr);
+      }
+    });
+});
+
+  // --- Driver of the Day fetch ---
   fetch(`https://docs.google.com/spreadsheets/d/${sheetId}/export?format=csv&range=U16:U16`)
     .then(r => r.text())
-    .then(txt => document.getElementById('driver-of-day-name').textContent = txt.trim() || "N/A")
-    .catch(() => document.getElementById('driver-of-day-name').textContent = "Error");
-</script>
+    .then(text => {
+      const name = text.trim();
+      document.getElementById("driver-of-day-name").textContent = name || "N/A";
+    })
+    .catch(() => {
+      document.getElementById("driver-of-day-name").textContent = "Error";
+    });
 
+</script>
 </body>
 </html>
